fix: relax CORS to allow all origins via patterns